# physics-sim

./: .gitmodules  CMakeLists.txt  README.md
shader/: aabb.frag  aabb.vert  collision_view.frag  collision_view.vert  default.frag  default.vert  line.frag  line.vert
src/: PhysicsBody.cpp  PhysicsWorld.cpp  Simulator.h  glad.c  main.cpp  physics.cpp  physics.h  render.cpp  render.h  util.h
src/apps/: bouncing_cube.cpp  bouncing_sphere.cpp  constraints.cpp  forward_dynamics.cpp  inverse_dynamics.cpp  obb.cpp  spline.cpp
src/physics/: PhysicsBody.cpp  PhysicsWorld.cpp  collisions.cpp  dynamics.cpp  dynamics.h  inverse_dynamics.cpp  inverse_dynamics.h  physics.cpp  physics.h  physics_body.cpp  physics_shape.cpp  physics_world.cpp
src/render/: camera.h  engine.h  render.cpp  render.h
src/util/: util.cpp  util.h
